styles/Services.module.css
.services {
    min-height: var(--content-min-height)
}

.content {
    display: flex;
    text-align: left;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    padding-left: 2rem;
    padding-right: 2rem;
    padding-top: 2rem;
    margin: auto;
}

.header {
    font-size: 2.75rem;
    width: 100%;
    font-weight: 500;
}

.subheader {
    font-size: 2rem;
    width: 100%;
    font-weight: 500;
}

.body {
    padding-bottom: 2rem;
    font-size: 1.2rem;
}

.whoWeServeBody{
    padding-bottom: 2rem;
    font-size: 1.2rem;
    width: 100%;
}

.disclaimer {
    font-size: 1.2rem;
    margin-bottom: 2rem;
    font-style: italic;
}

.finPlan {
    padding-bottom: 0 !important;
}

.graphicText {
    width: 14%;
    font-size: 1.2rem;
    line-height: 2.5rem;
    font-weight: 400;
}

.bodyGraphic {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    align-items: center;
}

.bodyImage {
    margin-left: 22%;
    width: 600px !important;
}

@media only screen and (max-width: 950px) {
    .subheader {
        line-height: 2.2rem;
    }
    .graphicText {
        width: 100%;
        text-align: center;
    }

    .bodyGraphic {
        margin-top: 1rem;
    }

    .bodyImage {
        margin-left: 0;
        width: 100% !important;
        margin-top: 1rem;
        margin-bottom: 1rem;
    }
}

